# DockerImages

./: README.md
Python/Flask/.devcontainer/: devcontainer.json
Python/Flask/docker/: .env  docker-compose.yml
Python/Flask/docker/app/: Dockerfile
Python/MachineLearning/: pyproject.toml
Python/MachineLearning/.devcontainer/: devcontainer.json
Python/MachineLearning/docker/: Dockerfile
Python/MachineLearning/docker/gpu/: docker-compose.yaml  docker-compose.yml
Python/plain/: .gitignore  pyproject.toml
Python/plain/.devcontainer/: devcontainer.json
Python/plain/docker/: Dockerfile  docker-compose.yml
Python/plain/docker/app/: Dockerfile
Python/selenium/: README.md  docker-compose.yml
Python/selenium/.devcontainer/: Dockerfile  devcontainer.json
